--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 											<h1>Database Systems</h1>
 											<p>Research group</p>
 										</header>
-										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research in database systems. Our work focuses on topics including energy-efficient and sustainable data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
+										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research on database systems. Our work focuses on topics including energy-efficient and sustainable data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -94,6 +94,11 @@
 										<h2>Recent highlights</h2>
 									</header>
 									<div class="posts">
+										<article>
+											<a target="_blank" href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<h3>New project: Troxartes</h3>
+											<p>A new project on data education receives external funding.</p>
+										</article>
 										<article>
 											<a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684/6738" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3>Publication: transparent ownership chains</h3>
