--- a/projects.html
+++ b/projects.html
@@ -56,23 +56,31 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<h1>Current projects</h1>
 									</header>
 									<div class="features">
-										<!--<article>
+										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>TROXARTES</h3>
-												<p>The project examines data systems industry needs for future professionals. Funded by City of Tampere.</p>
+												<h3>Troxartes</h3>
+												<p>The project examines data industry needs for future professionals. Funded by City of Tampere.</p>
 											</div>
-										</article> -->
+										</article>
+										<article>
+												<span class="icon solid fas fa-hands-helping"></span>
+												<div class="content">
+													<h3>pg4n</h3>
+													<p>The project implements an AI query writing tutor for PostgreSQL.</p>
+												</div>
+											</article>
 									<!-- <article>
 											<span class="icon solid fa-car"></span>
 											<div class="content">
 												<h3></h3>
 												<p>The project facilitates efficient data management in the context of . Funded by .</p>
 											</div>
-										</article> -->
+										</article>-->
 									</div>
 								</section>
 
+<!--
 								<section>
 									<header class="major">
 										<h1>Past projects</h1>
@@ -87,44 +95,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</article>
 									</div>
 								</section>
-
-							<!--
-							<section>
-								<header class="major">
-									<h1>Current projects</h1>
-								</header>
-								<div class="features">
-									<article>
-										<span class="icon solid fa-signal"></span>
-										<div class="content">
-											<h3>Efficiency through smart design</h3>
-											<p>From data-intensive transaction processing to data management solutions for AI, we design scalable, green, energy efficient, and smart data systems solutions.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon fa-gem"></span>
-										<div class="content">
-											<h3>Innovation in novel contexts</h3>
-											<p>We constantly apply novel data system inventions into old and new business domains and use-cases.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-rocket"></span>
-										<div class="content">
-											<h3>Research-as-a-Service</h3>
-											<p>We conduct scientifically rigorous user studies, lab tests, performance testing, and literature syntheses on demand.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-paper-plane"></span>
-										<div class="content">
-											<h3>Training and propagation</h3>
-											<p>We provide on-demand training in data systems topics such as DBMSs, querying, optimization, and reliability, as well as accessible propagation of recent advances in data systems.</p>
-										</div>
-									</article>
-								</div>
-							</section>
-						-->
+-->
 
 						</div>
 					</div>
