--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 											<h1>Database Systems</h1>
 											<p>Research group</p>
 										</header>
-										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research on database systems. Our work focuses on topics including energy-efficient and sustainable data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
+										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research on database systems. Our work focuses on topics including energy-efficient and sustainable data management, integrating AI into data pipelines, vector databases, data-intensive systems, query languages, DBMS compilers, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -146,7 +146,7 @@
 										<article>
 											<a target="_blank" href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
 											<h3>Training: Linux</h3>
-											<p>DBS Research organizes an intensive course on Linux operating system.</p>
+											<p>DBS research organizes an intensive course on Linux operating system.</p>
 											<!--<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul> -->
@@ -180,35 +180,11 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<li><a href="#">Homepage</a></li>
 										<li><a href="projects.html">Projects</a></li>
 										<li><a href="people.html">People</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li>
-											<!--
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
-									-->
+										<li><a href="training.html">Training</a></li>
 									</ul>
 								</nav>
 
