--- a/publications.html
+++ b/publications.html
@@ -173,7 +173,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<li><a href="projects.html">Projects</a></li>
 										<li><a href="people.html">People</a></li>
 										<li><a href="#">Publications</a></li>
-										<li></li>
+										<li><a href="training.html">Training</a></li>
 									</ul>
 								</nav>
 
