--- a/training.html
+++ b/training.html
@@ -23,85 +23,102 @@ https://fontawesome.com/v5/search?o=r&s=solid
 					<div id="main">
 						<div class="inner">
 
-							<!-- Section -->
 								<section>
 									<header class="major">
-										<h1>Members</h1>
+										<h1>Training</h1>
 									</header>
+									<p>DBS research group organizes intensive (1 to 3 days) courses on-demand, mostly in Finland. We have personnel and materials for the courses below. The courses can be tailored and new topics proposed. Our courses are given in Finnish or in English.</p>
 									<div class="features">
 										<article>
-											<span class="icon solid fa-user-circle"></span>
+											<span class="icon solid fas fa-database"></span>
 											<div class="content">
-												<h3>Bingxiang Chen</h3>
-												<p>Current research focuses on the intersection of databases, AI, and retrieval-augmented generation.</p>
+												<h3>PostgreSQL</h3>
+												<p>PostgreSQL fundamentals, SQL-dialect, database reliability, configuration, back-up and recovery, and database distribution.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-user-circle"></span>
+											<span class="icon solid fas fa-database"></span>
 											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
-												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
+												<h3>MongoDB</h3>
+												<p>MongoDB fundamentals, MongoDB query language, database reliability, database design, and database distribution.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-user-circle"></span>
+											<span class="icon solid fas fa-database"></span>
 											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
-												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
+												<h3>Oracle Database</h3>
+												<p>Oracle Database fundamentals, SQL-dialect, database reliability, configuration, back-up and recovery, and database distribution.</p>
 											</div>
 										</article>
-
+										<article>
+											<span class="icon solid fas fa-database"></span>
+											<div class="content">
+												<h3>Cassandra</h3>
+												<p>Cassandra fundamentals, CQL, database reliability, configuration, database design, and database distribution.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-database"></span>
+											<div class="content">
+												<h3>Database optimization</h3>
+												<p>Physical and logical database design, query optimization, and knob tuning.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-language"></span>
+											<div class="content">
+												<h3>SQL basics</h3>
+												<p>Querying and modifying data, data structures, basic expressions, table joins, ordering and grouping.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-language"></span>
+											<div class="content">
+												<h3>Advanced SQL</h3>
+												<p>Analytics functions, window functions, common table expressions, and special data types.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-language"></span>
+											<div class="content">
+												<h3>PL/SQL</h3>
+												<p>Functions, stored procedures, variables, and cursors.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-language"></span>
+											<div class="content">
+												<h3>Python basics</h3>
+												<p>Fundamental concepts, object-oriented programming with Python, and database connectivity.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fas fa-server"></span>
+											<div class="content">
+												<h3>Linux basics</h3>
+												<p>Kernel fundamentals, bash use and scripting, file system, user management, and process management.</p>
+											</div>
+										</article>
 									</div>
 								</section>
 
-<!-- COLLABORATORS:
+<!--
 								<section>
 									<header class="major">
-										<h1>Members</h1>
+										<h1>Past projects</h1>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon solid fa-user-circle"></span>
-											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
-												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-user-circle"></span>
-											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
-												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
-											</div>
-										</article>
-
+												<span class="icon solid fas fa-hands-helping"></span>
+												<div class="content">
+													<h3>pg4n</h3>
+													<p>The project implemented a query writing tutor and integrated it into PostgreSQL.</p>
+												</div>
+											</article>
 									</div>
 								</section>
 -->
-<!-- ALUMNI:
-								<section>
-									<header class="major">
-										<h1>Members</h1>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon solid fa-user-circle"></span>
-											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
-												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-user-circle"></span>
-											<div class="content">
-												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
-												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
-											</div>
-										</article>
 
-									</div>
-								</section>
--->
 						</div>
 					</div>
 
@@ -125,9 +142,9 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="projects.html">Projects</a></li>
-										<li><a href="#">People</a></li>
+										<li><a href="people.html">People</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li><a href="training.html">Training</a></li>
+										<li><a href="#">Training</a></li>
 											<!--
 											<span class="opener">Submenu</span>
 											<ul>
