--- a/projects.html
+++ b/projects.html
@@ -23,34 +23,6 @@ https://fontawesome.com/v5/search?o=r&s=solid
 					<div id="main">
 						<div class="inner">
 
-							<!-- Header
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
-								</header>
-							-->
-
-							<!-- Banner
-								<<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Database Systems Research</h1>
-											<p></p>
-										</header>
-										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
-									</div>
-									<span class="image object">
-										<img src="images/logo.png" alt="" />
-									</span>
-								</section>
--->
-							<!-- Section -->
 								<section>
 									<header class="major">
 										<h1>Current projects</h1>
@@ -60,6 +32,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Troxartes</h3>
+												<!--<h5>01/2025-12/2025</h5>-->
 												<p>The project examines data industry needs for future professionals.</p>
 											</div>
 										</article>
@@ -122,7 +95,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<li><a href="#">Projects</a></li>
 										<li><a href="people.html">People</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li></li>
+										<li><a href="training.html">Training</a></li>
 											<!--
 											<span class="opener">Submenu</span>
 											<ul>
