--- a/index.html
+++ b/index.html
@@ -95,13 +95,33 @@
 										<h2>Recent highlights</h2>
 									</header>
 									<div class="posts">
+										<!--<article>
+											<a href="_blank" class="image"><img src="images/pic12.jpg" alt="" /></a>
+											<h3>Publication: data systems education</h3>
+											<p>A new <i>ITiCSE'24 Working Group</i> publication highlights the discrepancies between data system curriculum guidelines, education, and industry needs.</p>
+										</article>-->
+										<article>
+											<a href="projects.html" class="image"><img src="images/pic14.jpg" alt="" /></a>
+											<h3>New project: SECHA</h3>
+											<p>A new project on data management for electric vehicle charging solutions receives external funding!</p>
+										</article>
+										<article>
+											<a href="people.html" class="image"><img src="images/pic12.jpg" alt="" /></a>
+											<h3>New researcher</h3>
+											<p>Researcher Nea Peltola joins the DBS research group!</p>
+										</article>
+										<article>
+											<a href="people.html" class="image"><img src="images/pic11.jpg" alt="" /></a>
+											<h3>New researcher</h3>
+											<p>Doctoral researcher Jahid Bin Kibria joins the DBS research group!</p>
+										</article>
 										<article>
 											<a href="people.html" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<h3>People: new researcher</h3>
+											<h3>New researcher</h3>
 											<p>Doctoral researcher Bingxiang Chen joins the DBS research group!</p>
 										</article>
 										<article>
-											<a target="_blank" href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
+											<a target="projects.html" href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
 											<h3>New project: Troxartes</h3>
 											<p>A new DBS research project on data education receives external funding!</p>
 										</article>
@@ -117,16 +137,13 @@
 										</article>
 										<article>
 											<a href="people.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>People: new researcher</h3>
+											<h3>New researcher</h3>
 											<p>Senior researcher Dr. Marko Junkkari joins the DBS research group!</p>
 										</article>
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649217.3653552" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Publication: SQL error messages</h3>
 											<p>A new publication in <i>ITiCSE'24</i> explores which elements in SQL error messages help fix syntax errors.</p>
-											<!--<ul class="actions">
-												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
-											</ul> -->
 										</article>
 										<article>
 											<a target="_blank" href="https://papers.academic-conferences.org/index.php/eccws/article/view/2220" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -145,7 +162,7 @@
 											</ul> -->
 										</article>
 										<article>
-											<a target="_blank" href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+											<a target="training.html" href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
 											<h3>Training: Linux</h3>
 											<p>DBS research organizes an intensive course on Linux operating system.</p>
 											<!--<ul class="actions">
