--- a/people.html
+++ b/people.html
@@ -46,6 +46,20 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<article>
 											<span class="icon solid fa-user-circle"></span>
 											<div class="content">
+												<h3>Jahid Bin Kibria</h3>
+												<p>Current research focuses on the intersection of data management and AI.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3>Nea Peltola</h3>
+												<p>Current research focuses on data systems industry and education.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
 												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
 												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
 											</div>
