--- a/projects.html
+++ b/projects.html
@@ -29,18 +29,24 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									</header>
 									<div class="features">
 										<article>
+											<span class="icon solid fas fa-car"></span>
+											<div class="content">
+												<h3>SECHA</h3>
+												<p>The project implements data management for electric vehicle charging solutions. Funded by Business Finland.</p>
+											</div>
+										</article>
+										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Troxartes</h3>
-												<!--<h5>01/2025-12/2025</h5>-->
-												<p>The project examines data industry needs for future professionals.</p>
+												<p>The project examines data industry needs for future professionals. Funded by City of Tampere.</p>
 											</div>
 										</article>
 										<article>
 												<span class="icon solid fas fa-hands-helping"></span>
 												<div class="content">
 													<h3>pg4n</h3>
-													<p>The project implements an AI query writing tutor for PostgreSQL.</p>
+													<p>The project implements an AI query writing tutor for PostgreSQL. Funded by several actors.</p>
 												</div>
 											</article>
 									<!-- <article>
