--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
+												<!--<tr>
+													<td>Education</td>
+													<td><a target="_blank" href="">Data systems education: Curriculum recommendations, course syllabi, and industry needs</a></td>
+													<td><a href="pdf/2024_recommendations.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>-->
 													<td>Applications</td>
 													<td><a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684">Making News Media Ownership Chains Transparent by Relational Databases</a></td>
 													<td><a href="pdf/2024_ownership.pdf" class="fas fa-file-pdf"></a></td>
