--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 										<h2>Recent highlights</h2>
 									</header>
 									<div class="posts">
-										<!--<article>
-											<a href="_blank" class="image"><img src="images/pic12.jpg" alt="" /></a>
+										<article>
+											<a href="publications.html" class="image"><img src="images/pic13.jpg" alt="" /></a>
 											<h3>Publication: data systems education</h3>
 											<p>A new <i>ITiCSE'24 Working Group</i> publication highlights the discrepancies between data system curriculum guidelines, education, and industry needs.</p>
-										</article>-->
+										</article>
 										<article>
 											<a href="projects.html" class="image"><img src="images/pic14.jpg" alt="" /></a>
 											<h3>New project: SECHA</h3>
