--- a/people.html
+++ b/people.html
@@ -26,7 +26,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h1>Members</h1>
+										<h1>Current members</h1>
 									</header>
 									<div class="features">
 										<article>
