--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,30 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<h1>Latest publications</h1>
 									</header>
 									<p>You can listen to podcast-like discussions on selected papers (courtesy of Google NotebookLM).</p>
+									<h2>2025</h2>
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Category</th>
+													<th>Title</th>
+													<th>PDF</th>
+													<th>Listen</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Education</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3689187.3709609">Data systems education: Curriculum recommendations, course syllabi, and industry needs</a></td>
+													<td><a href="pdf/2025_recommendation.pdf" class="fas fa-file-pdf"></a></td>
+													<td><audio style="width:200px;height:32px" controls>
+														  <source src="audio/2025_recommendation.mp3" type="audio/mp3">Your browser does not support the audio element.
+														  </audio>
+													</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
 									<h2>2024</h2>
 									<div class="table-wrapper">
 										<table>
@@ -40,13 +64,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 												</tr>
 											</thead>
 											<tbody>
-												<!--<tr>
-													<td>Education</td>
-													<td><a target="_blank" href="">Data systems education: Curriculum recommendations, course syllabi, and industry needs</a></td>
-													<td><a href="pdf/2024_recommendations.pdf" class="fas fa-file-pdf"></a></td>
-													<td></td>
-												</tr>
-												<tr>-->
+												<tr>
 													<td>Applications</td>
 													<td><a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684">Making News Media Ownership Chains Transparent by Relational Databases</a></td>
 													<td><a href="pdf/2024_ownership.pdf" class="fas fa-file-pdf"></a></td>
