--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="projects.html" class="image"><img src="images/pic_limnisius.jpg" alt="" /></a>
+											<h3>New project: Limnisius</h3>
+											<p>A new project on sustainable data systems receives external funding!</p>
+										</article>
+										<article>
+											<a href="publications.html" class="image"><img src="images/pic_v2.jpg" alt="" /></a>
+											<h3>Publication: knowledge management pitfalls</h3>
+											<p>A new case-study published in <i>Intl. Journal of Knowledge Management Studies</i> explores pitfalls in knowledge management in a large IT organization.</p>
+										</article>
+										<article>
 											<a href="publications.html" class="image"><img src="images/pic13.jpg" alt="" /></a>
 											<h3>Publication: data systems education</h3>
 											<p>A new <i>ITiCSE'24 Working Group</i> publication highlights the discrepancies between data system curriculum guidelines, education, and industry needs.</p>
