--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									</header>
 									<div class="features">
 										<article>
+											<span class="icon solid fas fa-leaf"></span>
+											<div class="content">
+												<h3>Limnisius</h3>
+												<p>The project explores best practices in sustainable data system design and implementation. Funded by Ulla Tuominen Foundation.</p>
+											</div>
+										</article>
+										<article>
 											<span class="icon solid fas fa-car"></span>
 											<div class="content">
 												<h3>SECHA</h3>
