--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,12 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Organizations</td>
+													<td><a target="_blank" href="">Pitfalls in effective knowledge management: Insights from an international information technology organization</a></td>
+													<td><a href="pdf/2025_v2_knowledge.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>Education</td>
 													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3689187.3709609">Data systems education: Curriculum recommendations, course syllabi, and industry needs</a></td>
 													<td><a href="pdf/2025_recommendation.pdf" class="fas fa-file-pdf"></a></td>
