--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="publications.html" class="image"><img src="images/pic_15.jpg" alt="" /></a>
+											<h3>Publication: PostgreSQL error messages</h3>
+											<p>A new article published in <i>ACM TOCE</i> investigates what makes PostgreSQL error messages more effective than others.</p>
+										</article>
+										<article>
 											<a href="projects.html" class="image"><img src="images/pic_limnisius.jpg" alt="" /></a>
 											<h3>New project: Limnisius</h3>
 											<p>A new DBS research project on sustainable data systems receives external funding!</p>
