--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 												</tr>
 												<tr>
 													<td>Organizations</td>
-													<td><a target="_blank" href="">Pitfalls in effective knowledge management: Insights from an international information technology organization</a></td>
+													<td><a target="_blank" href="https://www.inderscience.com/info/inarticle.php?artid=146084">Pitfalls in effective knowledge management: Insights from an international information technology organization</a></td>
 													<td><a href="pdf/2025_v2_knowledge.pdf" class="fas fa-file-pdf"></a></td>
 													<td></td>
 												</tr>
