--- a/index.html
+++ b/index.html
@@ -96,7 +96,12 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="publications.html" class="image"><img src="images/pic_15.jpg" alt="" /></a>
+											<a href="publications.html" class="image"><img src="images/pic16.jpg" alt="" /></a>
+											<h3>Publication: RAGs for access control</h3>
+											<p>A new article published in <i>ACM SAC</i> shows how retrieval-augmented generation can be used to enhance fine-grained access control.</p>
+										</article>
+										<article>
+											<a href="publications.html" class="image"><img src="images/pic15.jpg" alt="" /></a>
 											<h3>Publication: PostgreSQL error messages</h3>
 											<p>A new article published in <i>ACM TOCE</i> investigates what makes PostgreSQL error messages more effective than others.</p>
 										</article>
