--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,12 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Vectors</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/10.1145/3672608.3707848">Integrating Access Control with Retrieval-Augmented Generation: A Proof of Concept for Managing Sensitive Patient Profiles</a></td>
+													<td><a href="pdf/2025_sac.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>Education</td>
 													<td><a target="_blank" href="https://dl.acm.org/doi/10.1145/3732790">Novice perceptions on effective elements of PostgreSQL error messages</a></td>
 													<td><a href="pdf/2025_postgresql.pdf" class="fas fa-file-pdf"></a></td>
