--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="publications.html" class="image"><img src="images/pic17.jpg" alt="" /></a>
+											<h3>Publication: enhanced SQL error messages</h3>
+											<p>A new article published in <i>Empirical Software Engineering</i> shows evidence on the benefits of enhanced compiler error messages on error recovery.</p>
+										</article>
+										<article>
 											<a href="publications.html" class="image"><img src="images/pic16.jpg" alt="" /></a>
 											<h3>Publication: RAGs for access control</h3>
 											<p>A new article published in <i>ACM SAC</i> shows how retrieval-augmented generation can be used to enhance fine-grained access control.</p>
