--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,12 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Compilers</td>
+													<td><a target="_blank" href="https://link.springer.com/article/10.1007/s10664-025-10695-1">Enhanced SQL error messages facilitate faster error fixing</a></td>
+													<td><a href="pdf/2025_iteration.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>AI</td>
 													<td><a target="_blank" href="https://dl.acm.org/doi/10.1145/3672608.3707848">Integrating Access Control with Retrieval-Augmented Generation: A Proof of Concept for Managing Sensitive Patient Profiles</a></td>
 													<td><a href="pdf/2025_sac.pdf" class="fas fa-file-pdf"></a></td>
